Update readme for v4.0.0 release

--- a/readme.html
+++ b/readme.html
@@ -177,6 +177,9 @@ body {
                     <div class="tab-pane fade shadow rounded bg-white p-4" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-4-tab">
                         <h4 class="font-italic mb-4">Credits and History</h4>
                         <ul>
+                          <li>v4.0.0, 2025-03-12 (lat9):<ul>
+                            <li>CHANGE: Now released as a Zen Cart encapsulated plugin for zc210+ and EO<sup>5</sup> and later.</li>
+                          </ul></li>
                           <li>v3.2.1, 2024-09-19 (lat9, webchills):<ul>
                             <li>BUGFIX: Clicking on the link to sort by VAT Number in the admin customers' listing doesn't perform the sort.</li>
                             <li>The following files were changed:<ol>
