Update readmes for v4.0.1 release

--- a/readme.html
+++ b/readme.html
@@ -177,7 +177,7 @@ body {
                     <div class="tab-pane fade shadow rounded bg-white p-4" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-4-tab">
                         <h4 class="font-italic mb-4">Credits and History</h4>
                         <ul>
-                          <li>v4.0.1-beta1, 2025-03-19 (lat9):<ul>
+                          <li>v4.0.1, 2025-07-02 (lat9):<ul>
                             <li>BUGFIX: Correct PHP Warning when <var>VAT Number</var> isn't submitted with address-change form.</li>
                           </ul></li>
                           <li>v4.0.0, 2025-03-12 (lat9):<ul>
