#51: Call parent methods on plugin install/upgrade/uninstall

--- a/readme.html
+++ b/readme.html
@@ -47,7 +47,7 @@ body {
 <section class="py-5 header">
     <div class="container py-4">
         <header class="pb-2">
-            <h1 class="display-4 text-center">VAT for EU Countries (VAT4EU) v4.0.1</h1>
+            <h1 class="display-4 text-center">VAT for EU Countries (VAT4EU) v4.0.2</h1>
             <ul>
                 <li>Zen Cart download link: <a href="https://www.zen-cart.com/downloads.php?do=file&id=2164" target="_blank">https://www.zen-cart.com/downloads.php?do=file&id=2164</a></li>
                 <li>Zen Cart support thread: <a href="https://www.zen-cart.com/showthread.php?223003-VAT4EU-Support-Thread" target="_blank">https://www.zen-cart.com/showthread.php?223003-VAT4EU-Support-Thread</a></li>
@@ -177,6 +177,11 @@ body {
                     <div class="tab-pane fade shadow rounded bg-white p-4" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-4-tab">
                         <h4 class="font-italic mb-4">Credits and History</h4>
                         <ul>
+                          <li>v4.0.2-beta1, 2025-08-21 (lat9):<ul>
+                                <li>BUGFIX: Callback to parent class on install/upgrade/uninstall to prevent potential PHP logs.<ul>
+                                    <li><b>Note:</b> Also requires core-file changes identified in <a href="https://github.com/zencart/zencart/pull/7191" target="_blank">this</a> Zen Cart 2.2.0+ GitHub PR.</li>
+                                </ul></li>
+                          </ul></li>
                           <li>v4.0.1, 2025-07-02 (lat9):<ul>
                             <li>BUGFIX: Correct PHP Warning when <var>VAT Number</var> isn't submitted with address-change form.</li>
                           </ul></li>
