#52: Correct PHP Fatal error on plugin uninstall

--- a/readme.html
+++ b/readme.html
@@ -177,10 +177,11 @@ body {
                     <div class="tab-pane fade shadow rounded bg-white p-4" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-4-tab">
                         <h4 class="font-italic mb-4">Credits and History</h4>
                         <ul>
-                          <li>v4.0.2-beta1, 2025-08-21 (lat9):<ul>
+                          <li>v4.0.2-beta2, 2025-09-25 (lat9, piloujp):<ul>
                                 <li>BUGFIX: Callback to parent class on install/upgrade/uninstall to prevent potential PHP logs.<ul>
                                     <li><b>Note:</b> Also requires core-file changes as described in <a href="https://gist.github.com/lat9/9deb64d3325081d18bb0db5534bcf142#ensure-core-updates-are-applied" target="_blank">this</a> GitHub gist.</li>
                                 </ul></li>
+                                <li>BUGFIX: Correct PHP Fatal error when trying to uninstall the plugin.</li>
                           </ul></li>
                           <li>v4.0.1, 2025-07-02 (lat9):<ul>
                             <li>BUGFIX: Correct PHP Warning when <var>VAT Number</var> isn't submitted with address-change form.</li>
