Update readmes for v4.0.2 release

--- a/readme.html
+++ b/readme.html
@@ -177,7 +177,7 @@ body {
                     <div class="tab-pane fade shadow rounded bg-white p-4" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-4-tab">
                         <h4 class="font-italic mb-4">Credits and History</h4>
                         <ul>
-                          <li>v4.0.2-beta2, 2025-09-25 (lat9, piloujp):<ul>
+                          <li>v4.0.2, 2025-11-07 (lat9, piloujp):<ul>
                                 <li>BUGFIX: Callback to parent class on install/upgrade/uninstall to prevent potential PHP logs.<ul>
                                     <li><b>Note:</b> Also requires core-file changes as described in <a href="https://gist.github.com/lat9/9deb64d3325081d18bb0db5534bcf142#ensure-core-updates-are-applied" target="_blank">this</a> GitHub gist.</li>
                                 </ul></li>
